Multiple z-index fixes

--- a/src/renderer/components/HomeComponents/HomeNav/HomeNav.module.scss
+++ b/src/renderer/components/HomeComponents/HomeNav/HomeNav.module.scss
@@ -1,5 +1,5 @@
 .HomeNav {
-  z-index: 999;
+  z-index: 2;
 
   &.visible {
     ul {
