--- a/src/renderer/components/HomeComponents/HomeTopBar/style.module.scss
+++ b/src/renderer/components/HomeComponents/HomeTopBar/style.module.scss
@@ -20,7 +20,7 @@
   }
   .groupRight {
     .button {
-      z-index: 1000;
+      z-index: 3;
     }
   }
 }
